link to mortality database added

--- a/src/app/views/sari_ili/about/about.component.html
+++ b/src/app/views/sari_ili/about/about.component.html
@@ -1,5 +1,5 @@
 <c-card class="view-border--none">
-  <iframe title="SARI_ILI Dashboard12082022" height="800"
+  <iframe title="SARI_ILI Dashboard12082022" height="800" width="100%"
     src="https://app.powerbi.com/view?r=eyJrIjoiMTBkZjU0NjYtZTRkZS00ZmUxLWIyYzItMjdjNmFiODliNWY5IiwidCI6ImE4MmQ5Y2U3LTcwZDQtNGMzOS1iMmUyLTU5ZmQwODA0NjQ1YiIsImMiOjh9"
     frameborder="0" allowFullScreen="true"></iframe>
 </c-card>
