--- a/src/app/views/sarscov/about/about.component.html
+++ b/src/app/views/sarscov/about/about.component.html
@@ -1,4 +1,4 @@
-<c-card class="mb-4 view-border--none">
+<!-- <c-card class="mb-4 view-border--none">
   <h2>COVID-19 Mortality <span class="view-margin--side--10">:</span> About</h2>
 
   <p>
@@ -26,3 +26,12 @@
     has separate pages described as follows:
   </p>
 </c-card>
+ -->
+
+
+<c-card class="view-border--none">
+  <iframe title="MortalityDashboard_v1"
+  height="800" width="100%"
+  src="https://app.powerbi.com/view?r=eyJrIjoiY2JlOTUxYzItZjUwMy00OTczLWExNmYtZmI2NzhkNjY5YzY2IiwidCI6ImE4MmQ5Y2U3LTcwZDQtNGMzOS1iMmUyLTU5ZmQwODA0NjQ1YiIsImMiOjh9" frameborder="0" allowFullScreen="true"></iframe>
+</c-card>
+
