--- a/src/app/views/afi/about/about.component.html
+++ b/src/app/views/afi/about/about.component.html
@@ -1,6 +1,13 @@
 <c-card class="view-border--none">
-  <iframe title="IFBS Dashboard Report_v4" height="800"
+<!--   <iframe title="IFBS Dashboard Report_v4" height="800"
     src="https://app.powerbi.com/view?r=eyJrIjoiNDlkNTU4MDItMjFkNy00MjUzLTk4NzMtYmVmNjA3YTA0YzBiIiwidCI6ImE4MmQ5Y2U3LTcwZDQtNGMzOS1iMmUyLTU5ZmQwODA0NjQ1YiIsImMiOjh9"
     frameborder="0" allowFullScreen="true">
-  </iframe>
+  </iframe> -->
+<iframe title="IFBS Dashboard Report_v4_New"  height="800"
+     src="https://app.powerbi.com/view?r=eyJrIjoiNGEwOWU4NjQtY2ZlNi00ODRjLTlhOGUtMTg0ZjkwYmVhM2M5IiwidCI6ImE4MmQ5Y2U3LTcwZDQtNGMzOS1iMmUyLTU5ZmQwODA0NjQ1YiIsImMiOjh9"
+    frameborder="0" allowFullScreen="true">
+</iframe>
+
+
 </c-card>
+
