--- a/src/app/views/sarscov/about/about.component.html
+++ b/src/app/views/sarscov/about/about.component.html
@@ -1,51 +1,10 @@
-<!-- <c-card class="mb-4 view-border--none">
-  <h2>COVID-19 Mortality <span class="view-margin--side--10">:</span> About</h2>
-
-  <p>
-    With funding and technical assistance from Center for Disease Control and Protection (CDC), ICAP in collaboration
-    with the Ministry of Health (MOH) through the Division of Disease Surveillance and Response (DDSR) is implementing
-    an Integrated Health Facility-Based Surveillance (IFBS) project in 10 health facilities in Kenya.
-  </p>
-
-  <p>
-    Facility-based mortality surveillance is a key component of the Integrated Health Facility-Based Surveillance
-    (IFBS) that allows for analyses of demographic, clinical, pathological and epidemiological characteristics of
-    COVID-19 for people who died at the participating health facilities. Samples are collected from cadavers enrolled
-    in the study through minimally invasive tissue sampling (MITS) procedures or through nasopharyngeal/oral swabs and
-    tested for COVID-19.
-  </p>
-
-  <p>
-    This data will rapidly increase the availability of timely and quality mortality data to aid in the computation of
-    excess mortality which is useful for the determination of the public health impact of COVID-19 and other pathogens
-    and syndromes of interest.
-  </p>
-
-  <p>
-    This dashboard displays mortality surveillance data collected since project launch in April 2023. The dashboard
-    has separate pages described as follows:
-  </p>
-</c-card>
- -->
-
 
 <c-card class="view-border--none">
-
   <iframe title="MortalityDashboard_v1" width="100%" height="800"
   src="https://app.powerbi.com/view?r=eyJrIjoiY2JlOTUxYzItZjUwMy00OTczLWExNmYtZmI2NzhkNjY5YzY2IiwidCI6ImE4MmQ5Y2U3LTcwZDQtNGMzOS1iMmUyLTU5ZmQwODA0NjQ1YiIsImMiOjh9"
-  frameborder="0"
-  allowFullScreen="true">
-</iframe>
-
-
-
-<!--
-  <iframe title="MortalityDashboard_v1"
-  height="800" width="100%"
-  src="https://app.powerbi.com/view?r=eyJrIjoiY2JlOTUxYzItZjUwMy00OTczLWExNmYtZmI2NzhkNjY5YzY2IiwidCI6ImE4MmQ5Y2U3LTcwZDQtNGMzOS1iMmUyLTU5ZmQwODA0NjQ1YiIsImMiOjh9"
-  frameborder="0"
-  allowFullScreen="true"></iframe> -->
+  frameborder="0" allowFullScreen="true"></iframe>
 </c-card>
+
 
 
 
